<?xml version="1.0"?>
<package format="3">
  <name>tentacle_control</name>
  <version>0.0.1</version>
  <description>ROS2 control bridge and CLI for UNO-based tentacle arm.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>python3-serial</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
